[project]
name = "comfyui-streetview-loader"
description = "A custom node for ComfyUI that allows you to load images directly from Google Street View using Google Street Static API to use as backgrounds, textures, or inputs in your workflows."
version = "1.0.1"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["requests", "opencv-python", "python-dotenv"]

[project.urls]
Repository = "https://github.com/ru4ls/ComfyUI_StreetView-Loader"
#  Used by Comfy Registry https://registry.comfy.org
# Documentation = "https://github.com/ru4ls/ComfyUI_StreetView-Loader/wiki"
# "Bug Tracker" = "https://github.com/ru4ls/ComfyUI_StreetView-Loader/issues"

[tool.comfy]
PublisherId = "ruals"
DisplayName = "ComfyUI_StreetView-Loader"
Icon = "https://avatars.githubusercontent.com/u/126259521?v=4"
# includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

